Fixed colors to be same as apple dark mode

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ h1 {
     font-size: clamp(36px, 6vw, 50px);
     font-weight: normal;
     letter-spacing: 5px;
-    color: white;
+    color: rgb(218, 218, 218);
     text-transform: uppercase;
 }
 
@@ -89,7 +89,7 @@ h1 {
     vertical-align: middle;
     display: inline-block;
     margin-left: 5px;
-    filter: brightness(0) invert(1);
+    filter: invert(89%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(90%);
 }
 
 .game-container {
@@ -137,7 +137,7 @@ h1 {
     font-size: 16px;
     text-align: center;
     margin-bottom: 5px;
-    color: white;
+    color: rgb(218, 218, 218);
 }
 
 .clue-box,
@@ -164,13 +164,13 @@ h1 {
 }
 
 img.sport-icon {
-    filter: brightness(0) invert(1);
+    filter: invert(89%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(90%);
 }
 
 .clue-box {
     border-color: rgb(45, 45, 47);
     border-width: 2px;
-    color: white;
+    color: rgb(218, 218, 218);
 }
 
 #team-info p {
@@ -210,28 +210,28 @@ img.sport-icon {
     width: 1em;
     height: 1em;
     border-radius: 50%;
-    border: 1px solid white;
+    border: 1px solid rgb(218, 218, 218);
     flex-shrink: 0;
 }
 
 .team-name-box.green {
     background-color: #6aaa64;
-    color: white;
+    color: rgb(218, 218, 218);
 }
 
 .guess-box.green {
     background-color: #6aaa64;
-    color: white;
+    color: rgb(218, 218, 218);
 }
 
 .guess-box.yellow {
     background-color: #c9b458;
-    color: white;
+    color: rgb(218, 218, 218);
 }
 
 .guess-box.gray {
     background-color: rgb(45, 45, 47);
-    color: white;
+    color: rgb(218, 218, 218);
 }
 
 .guess-box.placeholder {
@@ -241,7 +241,7 @@ img.sport-icon {
 
 .team-name-box.placeholder {
     background-color: rgb(45, 45, 47);
-    color: white;
+    color: rgb(218, 218, 218);
     font-size: 16px;
 }
 
@@ -251,26 +251,26 @@ input {
     margin: 10px 10px 10px 0;
     border: 2px solid rgb(45, 45, 47);
     background-color: rgb(20, 20, 20);
-    color: white;
+    color: rgb(218, 218, 218);
     border-radius: 10px;
     font-size: clamp(14px, 1.2vw, 16px);
     outline: none;
 }
 
 input[list] {
-  background-image: url("data:image/svg+xml;utf8,<svg fill= 'white' height='20' viewBox='0 0 24 24' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/></svg>");
-  background-repeat: no-repeat;
-  background-position: right 10px center;
-  background-size: 16px;
-  appearance: none;
-  -webkit-appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg%20fill%3D'rgb(218%2C218%2C218)'%20height%3D'20'%20viewBox%3D'0%200%2024%2024'%20width%3D'20'%20xmlns%3D'http%3A//www.w3.org/2000/svg'%3E%3Cpath%20d%3D'M7%2010l5%205%205-5z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 16px;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 
 button {
     height: 43px;
     background-color: rgb(20, 20, 20);
-    color: white;
+    color: rgb(218, 218, 218);
     border: 2px solid rgb(45, 45, 47);
     border-radius: 10px;
     font-size: clamp(14px, 1vw, 16px);
@@ -346,7 +346,7 @@ button:active {
     margin: 0;
     text-align: center;
     font-size: 28px;
-    color: white;
+    color: rgb(218, 218, 218);
 }
 
 .modal-body {
@@ -367,7 +367,7 @@ button:active {
     position: relative;
     font-size: 1rem;
     text-align: left;
-    color: white;
+    color: rgb(218, 218, 218);
 }
 
 .modal-content h2 {
@@ -384,7 +384,7 @@ button:active {
     right: 20px;
     font-size: 2rem;
     cursor: pointer;
-    color: white;
+    color: rgb(218, 218, 218);
 }
 
 @media (max-width: 600px) {
